--- a/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
@@ -1,7 +1,11 @@
-﻿@model List<MODAMS.Models.ViewModels.Dto.TransfersIncomingAssetDTO>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using System.Globalization
+@inject IViewLocalizer Localizer
+
+@model List<MODAMS.Models.ViewModels.Dto.TransfersIncomingAssetDTO>
 <div class="page-header">
     <div>
-        <h1 class="page-title">Received Assets</h1>
+        <h1 class="page-title">@Localizer["ReceivedAssets"]</h1>
     </div>
     <div class="ms-auto pageheader-btn">
         <ol class="breadcrumb">
@@ -20,17 +24,17 @@
                     <table id="tblTransfers" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                         <thead class="bg-primary-gradient ms-auto divShadow">
                             <tr>
-                                <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
-                                <th class="text-white bg-transparent border-bottom-0">Transfer Date</th>
-                                <th class="text-white bg-transparent border-bottom-0">Store From</th>
-                                <th class="text-white bg-transparent border-bottom-0">Sub Category</th>
-                                <th class="text-white bg-transparent border-bottom-0">Make</th>
-                                <th class="text-white bg-transparent border-bottom-0">Model</th>
-                                <th class="text-white bg-transparent border-bottom-0">Asset Name</th>
-                                <th class="text-white bg-transparent border-bottom-0">Barcode</th>
-                                <th class="text-white bg-transparent border-bottom-0">Serial Number</th>
-                                <th class="text-white bg-transparent border-bottom-0">Cost</th>
-                                <th class="text-white bg-transparent border-bottom-0">Current Value</th>
+                                <th class="text-white bg-transparent border-bottom-0 w-5">@Localizer["SNo"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["TransferDate"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["StoreFrom"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["SubCategory"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Make"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Model"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["AssetName"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Barcode"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["SerialNo"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["Cost"]</th>
+                                <th class="text-white bg-transparent border-bottom-0">@Localizer["CurrentValue"]</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -65,7 +69,7 @@
                 <div class="row">
                     @*<hr class="customHR" />*@
                     <div class="col-sm-12">
-                        <a asp-action="Index" asp-controller="Transfers" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;Previous</a>
+                        <a asp-action="Index" asp-controller="Transfers" id="btnCancel" class="btn btn-outline-default"><i class="fe fe-corner-up-left"></i>&nbsp;@Localizer["Previous"]</a>
                     </div>
                 </div>
             </div>
