Forgot password functionality localized

--- a/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
 @model ForgotPasswordConfirmation
+@inject IViewLocalizer Localizer
+
 @{
     Layout = "_Layout1";
 }
@@ -14,19 +17,19 @@
         <div class="card-body">
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
-                <span>Forgot Password</span>
+                <span class="h4">@Localizer["ForgotPassword"]</span>
             </span>
             <span class="text-muted pb-5" style="font-size:small;">
-                A confirmation email has been sent to your address!
+                @Localizer["FPCMessage"]
             </span>
             <br /><br />
             <div class="text-center pt-3">
-                <p class="text-dark mb-0">Back to <a href="Login" class="text-primary ms-1">Sign in</a></p>
+                <p class="text-dark mb-0">@Localizer["BackTo"] <a href="Login" class="text-primary ms-1">@Localizer["SignIn"]</a></p>
             </div>
         </div>
         <div class="card-footer">
             <div class="col-md-12 col-sm-12 text-center text-darkgray">
-                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+                <span style="font-size:12px;">@Localizer["DevelopedBy"]&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
         </div>
     </div>
