--- a/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
 @model ForgotPasswordModel
+@inject IViewLocalizer Localizer
+
 @{
     Layout = "_Layout1";
     ViewData["Title"] = "Forgot your password?";
@@ -15,17 +18,17 @@
         <div class="card-body">
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
-                <span class="text-blue mb-0" style="font-size:small;">Reset Password</span>
+                <span class="text-blue mb-0" style="font-size:small;">@Localizer["ResetPassword"]</span>
             </span>
 
 
-            <span class="text-muted pb-5" style="font-size:small;">Enter the email address registered on your account</span>
+            <span class="text-muted pb-5 text-sm" style="font-size:small;">@Localizer["ForgotPasswordMessage"]</span>
             <br /><br />
             <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
 
-            <form id="account" class="login100-form validate-form" method="post">
+            <form id="account" class=" validate-form" method="post">
                 <div class="wrap-input100 validate-input" data-bs-validate="Valid email is required: ex@abc.xyz">
-                    <input asp-for="Input.Email" class="input100" placeholder="Email">
+                    <input asp-for="Input.Email" class="input100" placeholder="@Localizer["Email"]">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-email" aria-hidden="true"></i>
@@ -33,17 +36,17 @@
                 </div>
                 <div class="container-login100-form-btn">
                     <button type="submit" class="login100-form-btn btn-primary">
-                        Reset Password
+                        @Localizer["ResetPassword"]
                     </button>
                 </div>
                 <div class="text-center pt-3">
-                    <p class="text-dark mb-0">Not a member?<a href="Register" class="text-primary ms-1">Register</a></p>
+                    <p class="text-dark mb-0">@Localizer["NotRegisteredYet"]?<a href="Register" class="text-primary ms-1">@Localizer["Register"]</a></p>
                 </div>
             </form>
         </div>
         <div class="card-footer">
             <div class="col-md-12 col-sm-12 text-center text-darkgray">
-                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+                <span style="font-size:12px;">@Localizer["DevelopedBy"]&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
         </div>
     </div>
