--- a/MODAMSWeb/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
+
 @model ResetPasswordConfirmationModel
+@inject IViewLocalizer Localizer
+
 @{
     Layout = "_Layout1";
 }
@@ -9,20 +13,20 @@
         <div class="card-body">
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
-                <span>Reset Password</span>
+                <span class="h4">@Localizer["ResetPassword"]</span>
             </span>
             <span class="text-muted pb-5" style="font-size:small;">
-                Password Reset was successful, please click the button below to sign in to your account!
+                @Localizer["RPCMessage"]
             </span>
             <br /><br />
             <div class="text-center pt-3">
-                Click here to <a href="Login" class="text-primary ms-1">Sign in</a>
+                @Localizer["BackTo"] <a href="Login" class="text-primary ms-1">@Localizer["SignIn"]</a>
                 <br /><br />
             </div>
         </div>
         <div class="card-footer">
             <div class="col-md-12 col-sm-12 text-center text-darkgray">
-                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+                <span style="font-size:12px;">@Localizer["DevelopedBy"]&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
         </div>
     </div>
