--- a/MODAMSWeb/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/MODAMSWeb/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -1,5 +1,9 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
 @model ResetPasswordModel
+
+@inject IViewLocalizer Localizer
+
 @{
     Layout = "_Layout1";
 }
@@ -14,30 +18,33 @@
         <div class="card-body">
             <span class="login100-form-title">
                 <img src="~/assets/images/brand/FGS.png" class="h-8" alt="" /><br />
-                <span>Reset Password</span>
+                <span class="h4">@Localizer["ResetPassword"]</span>
             </span>
 
-            <span class="text-muted pb-5" style="font-size:small;">Enter the email address registered on your account</span>
+            <span class="text-muted pb-5" style="font-size:small;">@Localizer["RPMessage"]</span>
             <br /><br />
+            <input type="text" style="display:none">
+            <input type="password" style="display:none">
+
             <div asp-validation-summary="ModelOnly" class="text-danger text-center" role="alert"></div>
-            <form class="login100-form validate-form" method="post">
+            <form class=" validate-form" method="post">
                 <input asp-for="Input.Code" type="hidden" />
                 <div class="wrap-input100 validate-input" data-bs-validate="Valid email is required: ex@abc.xyz">
-                    <input asp-for="Input.Email" class="input100" placeholder="Email">
+                    <input asp-for="Input.Email" class="input100" placeholder="@Localizer["Email"]" autocomplete="off" readonly onfocus="this.removeAttribute('readonly');">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-email" aria-hidden="true"></i>
                     </span>
                 </div>
                 <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
-                    <input asp-for="Input.Password" class="input100" placeholder="Password">
+                    <input asp-for="Input.Password" class="input100" placeholder="@Localizer["Password"]" autocomplete="off" readonly onfocus="this.removeAttribute('readonly');">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-lock" aria-hidden="true"></i>
                     </span>
                 </div>
                 <div class="wrap-input100 validate-input" data-bs-validate="Password is required">
-                    <input asp-for="Input.ConfirmPassword" class="input100" placeholder="Confirm Password">
+                    <input asp-for="Input.ConfirmPassword" class="input100" placeholder="@Localizer["ConfirmPassword"]">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="zmdi zmdi-lock" aria-hidden="true"></i>
@@ -45,15 +52,15 @@
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger pt-2"></span>
                 </div>
                 
-                <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
+                <button type="submit" class="w-100 btn btn-lg btn-primary">@Localizer["Reset"]</button>
             </form>
             <div class="text-center pt-3">
-                <p class="text-dark mb-0">Go back to ?<a href="Login" class="text-primary ms-1">Sign in</a></p>
+                <p class="text-dark mb-0">@Localizer["BackTo"] ?<a href="Login" class="text-primary ms-1">@Localizer["SignIn"]</a></p>
             </div>
         </div>
         <div class="card-footer">
             <div class="col-md-12 col-sm-12 text-center text-darkgray">
-                <span style="font-size:12px;">Developed by&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
+                <span style="font-size:12px;">@Localizer["DevelopedBy"]&nbsp;|&nbsp;</span><img src="~/assets/images/brand/unops_footer_logo.png">&nbsp;
             </div>
         </div>
     </div>
@@ -61,4 +68,11 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $(document).ready(function(){
+            setTimeout(function () {
+                $('.input100').val('');
+            }, 100);
+        });
+    </script>
 }
